force-app/main/default/objects/CC_Notificacion_Volumen__c/CC_Notificacion_Volumen__c.object-meta.xml
<CustomObject>
    <label>Actualización de volumen</label>
    <nameField>
        <displayFormat>VOL-{0000000}</displayFormat>
        <label>Notificación de volumen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actualizaciones de volumen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>