force-app/main/default/objects/CC_Notificacion_Volumen__c/fields/CC_Agrupador_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupador_Id__c</fullName>
    <label>Agrupador</label>
    <referenceTo>CC_Agrupador__c</referenceTo>
    <relationshipLabel>Actualizaciones de volumen</relationshipLabel>
    <relationshipName>CC_Actualizaciones_Volumen</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>