force-app/main/default/objects/CC_Notificacion_Volumen__c/fields/CC_Contenido__c.field-meta.xml
<CustomField>
    <fullName>CC_Contenido__c</fullName>
    <description>Contenido de la actualización del evento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contenido de la actualización del evento</inlineHelpText>
    <label>Contenido</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>