force-app/main/default/objects/CC_Notificacion_Volumen__c/fields/CC_Estado__c.field-meta.xml
<CustomField>
    <fullName>CC_Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envío pendiente</fullName>
                <default>true</default>
                <label>Envío pendiente</label>
            </value>
            <value>
                <fullName>Enviada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>