force-app/main/default/objects/CC_Notificacion_Volumen__c/fields/CC_Llamadas_Abandonadas__c.field-meta.xml
<CustomField>
    <fullName>CC_Llamadas_Abandonadas__c</fullName>
    <label>Llamadas abandonadas</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>