force-app/main/default/objects/CC_Notificacion_Volumen__c/fields/CC_Mensaje__c.field-meta.xml
<CustomField>
    <fullName>CC_Mensaje__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mensaje</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>