force-app/main/default/objects/CC_Notificacion_Volumen__c/fields/CC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actualizar evento</fullName>
            </value>
            <value>
                <fullName>Mensaje VRU</fullName>
            </value>
            <value>
                <fullName>Notificación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>