force-app/main/default/objects/CC_Notificacion_Volumen__c/validationRules/CC_ActVolumen_Agrupador_Maximo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_ActVolumen_Agrupador_Maximo</fullName>
    <active>true</active>
    <description>Solo permite crear una actualización de volumen sobre el agrupador que ha creado el máximo.</description>
    <errorConditionFormula>ISBLANK(CC_Agrupador_Id__r.CC_Id_Maximo__c)</errorConditionFormula>
    <errorMessage>Solo es posible crear una Actualización de Volumen sobre el Agrupador que ha creado el Maximo.</errorMessage>
</ValidationRule>