force-app/main/default/objects/CC_Notificacion_Volumen__c/validationRules/CC_Estado_Envio_Pendiente.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Estado_Envio_Pendiente</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(CC_Estado__c, &quot;Envío pendiente&quot;))</errorConditionFormula>
    <errorMessage>No se pueden editar actualizaciones de volumen con estado distinto a &quot;Envío pendiente&quot;.</errorMessage>
</ValidationRule>